syntax = "proto3";

package erda.core.pipeline.cluster;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "common/identity.proto";
import "common/commit.proto";
import "common/metadata.proto";
import "core/pipeline/queue/queue.proto";
import "core/pipeline/cron/cron.proto";

option go_package = "github.com/erda-project/erda-proto-go/core/pipeline/cluster/pb";

service ClusterService {
  rpc ClusterHook (ClusterHookRequest) returns (ClusterHookResponse) {
    option (google.api.http) = {
      post: "/api/pipeline-clusters/actions/hook",
    };
  }
}

message ClusterHookRequest {
  string event = 1;
  string action = 2;
  string orgID = 3;
  string projectID = 4;
  string applicationID = 5;
  string env = 6;
  string timeStamp = 7;
  google.protobuf.Value content = 8;
}
message ClusterHookResponse {
}
